--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "Simulation of a Blockchain",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev2": "nodemon server2.js"
   },
   "author": "Kevin De Notariis",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
+    "elliptic": "^6.5.3",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jquery": "^3.5.1",
-    "mongoose": "^5.11.9",
-    "nodemon": "^2.0.6"
+    "mongoose": "^5.11.10",
+    "nodemon": "^2.0.6",
+    "qs": "^6.9.4",
+    "random-words": "^1.1.1"
   }
 }
