--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
   "scripts": {
     "dev": "nodemon server.js",
     "dev2": "nodemon server2.js",
-    "dev3": "nodemon server3.js"
+    "dev3": "nodemon server3.js",
+    "test": "mocha --timeout 10000 --recursive"
   },
   "author": "Kevin De Notariis",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "elliptic": "^6.5.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "is-reachable": "^5.0.0",
     "jquery": "^3.5.1",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.6",
     "qs": "^6.9.4",
     "random-words": "^1.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "mocha-http": "^0.2.5"
   }
 }
